Remove Manual Mode - Require Gemini API

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h2>🔑 Masukkan API Key Gemini</h2>
-                <p>Untuk menggunakan fitur AI Generator, silakan masukkan API Key Google Gemini Anda.</p>
+                <p>API Key Google Gemini diperlukan untuk menggunakan aplikasi ini.</p>
             </div>
             <div class="modal-body">
                 <label for="apiKeyInput">API Key Gemini:</label>
@@ -29,7 +29,6 @@
                 </div>
                 <div class="modal-buttons">
                     <button id="saveApiKey" class="btn-primary">Simpan & Lanjutkan</button>
-                    <button id="skipApiKey" class="btn-secondary">Lewati (Mode Manual)</button>
                 </div>
             </div>
         </div>
