Add Close Button and API Key Validation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="apiKeyModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
+                <button class="close-btn" id="closeModal">&times;</button>
                 <h2>🔑 Masukkan API Key Gemini</h2>
                 <p>API Key Google Gemini diperlukan untuk menggunakan aplikasi ini.</p>
             </div>
